--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <a href="group1.html">group1</a>
+<a href="group2.html">group2</a>
+<a href="group3.html">group3</a>
+<a href="group4.html">group4</a>
+<a href="group5.html">group5</a>
+<a href="group6.html">group6</a>
+<a href="group7.html">group7</a>
+<a href="group8.html">group8</a>
+<a href="group9.html">group9</a>
