--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<a href="group1.html">group1</a>
-<a href="group2.html">group2</a>
-<a href="group3.html">group3</a>
-<a href="group4.html">group4</a>
-<a href="group5.html">group5</a>
-<a href="group6.html">group6</a>
-<a href="group7.html">group7</a>
-<a href="group8.html">group8</a>
-<a href="group9.html">group9</a>
+<div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; padding: 20px; background-color: #f0f0f0; border-radius: 10px;">
+    <a href="group1.html" style="text-decoration: none; color: #fff; background-color: #007bff; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group1</a>
+    <a href="group2.html" style="text-decoration: none; color: #fff; background-color: #28a745; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group2</a>
+    <a href="group3.html" style="text-decoration: none; color: #fff; background-color: #dc3545; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group3</a>
+    <a href="group4.html" style="text-decoration: none; color: #fff; background-color: #ffc107; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group4</a>
+    <a href="group5.html" style="text-decoration: none; color: #fff; background-color: #17a2b8; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group5</a>
+    <a href="group6.html" style="text-decoration: none; color: #fff; background-color: #6f42c1; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group6</a>
+    <a href="group7.html" style="text-decoration: none; color: #fff; background-color: #e83e8c; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group7</a>
+    <a href="group8.html" style="text-decoration: none; color: #fff; background-color: #fd7e14; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group8</a>
+    <a href="group9.html" style="text-decoration: none; color: #fff; background-color: #20c997; padding: 10px 15px; border-radius: 5px; transition: background-color 0.3s;">group9</a>
+</div>
+
