--- a/group2.html
+++ b/group2.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="100%" src="group2/index.html"></iframe>
+<iframe width="100%" height="100%" src="/gruop2/index.html"></iframe>
